--- a/index.html
+++ b/index.html
@@ -8,11 +8,31 @@
     <title>World Clock by Maria Kisel</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">Atlanta</option>
+        <option value="">Philadelphia</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">January 6th 2023</div>
+        <div class="time">6:55:28 PM</div>
+      </div>
+      <div class="city">
+        <h2>New York</h2>
+        <div class="date">January 6th 2023</div>
+        <div class="time">6:55:28 PM</div>
+      </div>
+    </div>
     <footer>
       Coded by Maria Kisel and is
       <a href="#" target="_blanck">open sourced on GitHub</a>
     </footer>
+
     <script src="js/index.js"></script>
   </body>
 </html>
