Added css style

--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
         <option value="">Philadelphia</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">January 6th 2023</div>
-        <div class="time">6:55:28 PM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">January 6th 2023</div>
+        </div>
+        <div class="time">6:55:28 <small> PM</small></div>
       </div>
       <div class="city">
-        <h2>New York</h2>
-        <div class="date">January 6th 2023</div>
-        <div class="time">6:55:28 PM</div>
+        <div>
+          <h2>New York</h2>
+          <div class="date">January 6th 2023</div>
+        </div>
+        <div class="time">6:55:28 <small>PM</small></div>
       </div>
     </div>
+    <br />
     <footer>
       Coded by Maria Kisel and is
       <a href="#" target="_blanck">open sourced on GitHub</a>
