--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <br />
     <footer>
-      Coded by Maria Kisel and is
+      Coded by <strong> Maria Kisel </strong> and is
       <a href="#" target="_blanck">open sourced on GitHub</a>
     </footer>
 
