--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city</option>
-        <option value="">London</option>
-        <option value="">Atlanta</option>
-        <option value="">Philadelphia</option>
+        <option value="Europe/London">London</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="America/New_York">New York</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date">January 6th 2023</div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date">January 6th 2023</div>
+          </div>
+          <div class="time">6:55:28 <small> PM</small></div>
         </div>
-        <div class="time">6:55:28 <small> PM</small></div>
-      </div>
-      <div class="city" id="new-york">
-        <div>
-          <h2>New York</h2>
-          <div class="date">January 6th 2023</div>
+        <div class="city" id="new-york">
+          <div>
+            <h2>New York</h2>
+            <div class="date">January 6th 2023</div>
+          </div>
+          <div class="time">6:55:28 <small>PM</small></div>
         </div>
-        <div class="time">6:55:28 <small>PM</small></div>
       </div>
     </div>
     <br />
