--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <option value="">Select a city</option>
         <option value="Europe/London">London</option>
         <option value="America/Los_Angeles">Los Angeles</option>
-        <option value="America/New_York">New York</option>
+        <option value="America/Atlanta">New York</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
