--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <select id="city">
         <option value="">Select a city</option>
         <option value="Europe/London">London</option>
-        <option value="America/Los_Angeles">Los Angeles</option>
-        <option value="America/Atlanta">New York</option>
+        <option value="Europe/Moscow">Moscow</option>
+        <option value="America/Atlanta">Atlanta</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
