added current location
value="current", and added if statement to JS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
       <select id="city">
         <option value="">Select a city</option>
-        <option value="Europe/London">London</option>
+        <option value="current">My current location</option>
+        <option value="Asia/Vladivostok">Vladivostok</option>
         <option value="Europe/Moscow">Moscow</option>
         <option value="America/Atlanta">Atlanta</option>
       </select>
