added third city

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
           </div>
           <div class="time">6:55:28 <small>PM</small></div>
         </div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris</h2>
+            <div class="date">January 6th 2023</div>
+          </div>
+          <div class="time">6:55:28 <small>PM</small></div>
+        </div>
       </div>
     </div>
     <br />
