made changes with Atlanta
changes "America/Atlanta" to "America/New_York" since moment does not time zone for Atlanta

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <option value="current">My current location</option>
         <option value="Asia/Vladivostok">Vladivostok</option>
         <option value="Europe/Moscow">Moscow</option>
-        <option value="America/Atlanta">Atlanta</option>
+        <option value="America/New_York">Atlanta</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
