added link to repository

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <br />
     <footer>
       Coded by <strong> Maria Kisel </strong> and is
-      <a href="#" target="_blanck">open sourced on GitHub</a>
+      <a href="https://github.com/mariakisel16/world-clock" target="_blanck"
+        >open sourced on GitHub</a
+      >
     </footer>
 
     <script src="js/index.js"></script>
