--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.40/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock by Maria Kisel</title>
   </head>
@@ -26,8 +27,9 @@
             <h2>Los Angeles</h2>
             <div class="date">January 6th 2023</div>
           </div>
-          <div class="time">6:55:28 <small> PM</small></div>
+          <div class="time">6:55:28 <span class="time">PM</span></div>
         </div>
+
         <div class="city" id="new-york">
           <div>
             <h2>New York</h2>
@@ -48,7 +50,7 @@
     <footer>
       Coded by <strong> Maria Kisel </strong> and is
       <a href="https://github.com/mariakisel16/world-clock" target="_blanck"
-        >open sourced on GitHub</a
+        >open-sourced on GitHub</a
       >
     </footer>
 
